base-installer (1.84) UNRELEASED; urgency=low

  [ Frans Pop ]
  * Drop isinstallable test for sarge, we don't support sarge installs
    anymore.
  * Remove support for sparc32.

  [ Colin Watson ]
  * Clean up /tmp/available_kernels.txt.unfiltered too.

 -- Frans Pop <fjp@debian.org>  Wed, 25 Jul 2007 23:53:06 +0200

base-installer (1.83) unstable; urgency=low

  [ Fabio M. Di Nitto ]
  * Install smp kernel by default on sun4v (Niagara based sparc).
    With the new LDOM support on the way, adding/removing CPU's
    from control/service/guest nodes is easy as drinking a glass
    of water. With this change we will guarantee that the user
    will always get the best setup.

  [ Frans Pop ]
  * Drop preprogrammed kernel defaults as that mechanism is no longer used.
  * Restructure kernel selection to allow for preseeding. Preseeding "none"
    to skip installing a kernel is supported.
  * If we could not determine any reasonable default kernel, ask the question
    at critical priority.
  * Sort the kernel list in ascending order. With the improved method of
    selecting a default and the fact that we no longer have different kernel
    major versions, reverse sorting is no longer as important, especially as
    using a descending order has its own disadvantages.

  [ Joey Hess ]
  * Move dependencies on mounted-partitions and created-fstab from
    base-installer to bootstrap-base.

  [ Updated translations ]
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Jul 2007 13:39:36 -0400

base-installer (1.82) unstable; urgency=low

  [ Frans Pop ]
  * Add support for Serial ATA RAID (dmraid):
    - install dmraid (if needed)
    - create device nodes in /target for SATA RAID devmapper devices

  [ Joey Hess ]
  * Split off a bootstrap-base package that contains the bits needed to
    [c]debootstrap a base installation.