@@ -515,6 +515,15 @@ EOF
 			fi
 		fi
 
+		# initramfs-tools needs busybox pre-installed (and only
+		# recommends it)
+		if [ "$rd_generator" = "initramfs-tools" ]; then
+			if ! log-output -t base-installer apt-install busybox; then
+				db_subst base-installer/kernel/failed-package-install PACKAGE busybox
+				exit_error base-installer/kernel/failed-package-install
+			fi
+		fi
+
 		# Make sure the ramdisk creation tool is installed before we
 		# change its configuration
 		db_subst base-installer/section/install_kernel_package SUBST0 "$rd_generator"
