@@ -8,7 +8,11 @@ base-installer (1.84) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Clean up /tmp/available_kernels.txt.unfiltered too.
 
- -- Frans Pop <fjp@debian.org>  Wed, 25 Jul 2007 23:53:06 +0200
+  [ Joey Hess ]
+  * Install busybox before installing initramfs-tools, to support version 0.91
+    which will only recommend busybox.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 06 Sep 2007 18:57:46 -0400
 
 base-installer (1.83) unstable; urgency=low
 
